style: fix alignment of spinner and elements

--- a/src/components/spinner/Spinner.scss
+++ b/src/components/spinner/Spinner.scss
@@ -2,10 +2,10 @@ body {
 	background: var(--color-bg-main);
 	display: flex;
 	align-items: center;
-	justify-content: center;
 }
 
 .spinner {
+	margin: 0 auto;
 	width: 70px;
 	height: 70px;
 	border: 7px solid #41c1f4;
